--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -6,3 +6,8 @@ sky:
     database: sky_take_out
     username: root
     password: 1234
+  alioss:
+    endpoint: oss-cn-beijing.aliyuncs.com
+    access-key-id: LTAI5t6Ug244SgiDgqgGfaFj
+    access-key-secret: txUx7iHN95stA9x8MtHCOW6XeATLIA
+    bucket-name: web-gh05
