--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     active: dev
   main:
     allow-circular-references: true
+
   datasource:
     druid:
       driver-class-name: ${sky.datasource.driver-class-name}
@@ -42,9 +43,17 @@ sky:
     admin-ttl: 7200000000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+    user-secret-key: ggh
+    user-token-name: authentication
+    user-ttl: 7200000000
+
   alioss:
     endpoint: ${sky.alioss.endpoint}
     access-key-id: ${sky.alioss.access-key-id}
     access-key-secret: ${sky.alioss.access-key-secret}
     bucket-name: ${sky.alioss.bucket-name}
+  wechat:
+    appid: ${sky.wechat.appid}
+    secret: ${sky.wechat.secret}
 
